# Sponzey-Nobie

./: .env.example  .gitignore  AGENT.md  AGENTS.md  LICENSE  README.en.md  README.ko.md  README.md  analyse.md  biome.json  package.json  pnpm-lock.yaml  process-to.md  process.md  protocol.md  result.md  source.md  sys_prop.md  sys_prop.md.ko  test-telegram.mjs  tsconfig.base.json
Yeonjang/: Cargo.toml  README.md  build.rs  source.md
Yeonjang/design/: index.html  sample.html
Yeonjang/helpers/macos/: camera_capture_helper.swift
Yeonjang/manifests/: permissions.json
Yeonjang/manifests/macos/: Info.plist
Yeonjang/src/: gui.rs  icon.rs  main.rs  mqtt.rs  node.rs  protocol.rs  settings.rs  source.md
Yeonjang/src/automation/: mod.rs  source.md
Yeonjang/src/features/: camera.rs  keyboard.rs  mod.rs  mouse.rs  screen.rs  source.md  system.rs
Yeonjang/src/platform/: linux.rs  macos.rs  mod.rs  shared.rs  source.md  unsupported.rs  windows.rs
docs/: execution-decision-regression.md  release-runbook.md
prompts/: bootstrap.md  bootstrap.md.en  channel.md  channel.md.en  completion_policy.md  completion_policy.md.en  definitions.md  definitions.md.en  identity.md  identity.md.en  memory_policy.md  memory_policy.md.en  nobie-execution.md  output_policy.md  output_policy.md.en  planner.md  planner.md.en  recovery_policy.md  recovery_policy.md.en  soul.md  soul.md.en  tool_policy.md  tool_policy.md.en  topology_executor_policy.md  user.md  user.md.en  web_retrieval_planner.md  web_retrieval_planner.md.en
scripts/: build-yeonjang-linux.sh  build-yeonjang-macos.sh  (+18 more)
(+485 files in other folders)
