[package]
name = "nobie-yeonjang"
version = "0.1.0"
edition = "2024"
description = "Rust extension node for Nobie system control and local automation"
license = "MIT"

[dependencies]
anyhow = "1.0"
directories = "5.0"
eframe = "0.31.1"
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tray-icon = "0.20"
